Assignment/css/style.css
body {
	font: 15px/1.3em "Open Sans","sans-serif";
	color: rgb(0, 0, 0);
}

h2 {
	font: 40px/1.1em "Open Sans","sans-serif";
}

h3 {
	font: 32px/1.3em "Open Sans","sans-serif";
}

h6 {
	font: 13px/1.3em "Open Sans","sans-serif";
}

a {
	transition: background-color 0.4s ease 0s, color 0.4s ease 0s;
}

	a:hover {

	}

.font-bold {
	font-weight: bold;
}

.font-red {
	color: rgb(204, 16, 19);
}

.btn-red {
	min-width: 120px;
	min-height: 40px;
	line-height: 24px;
	padding: 0px 30px;
	text-transform: uppercase;
	color: rgb(255, 255, 255);
	border-radius: 5px 5px 5px 5px;
	background-color: rgb(204, 16, 19);
	transition: border-color 0.4s ease 0s, background-color 0.4s ease 0s;
	box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.6);
	border: 0px solid rgb(204, 16, 19);
	font: 12px/1.3em "Open Sans","sans-serif";
	cursor: pointer !important;
}

	.btn-red:hover {
		background-color: rgb(136, 10, 12);
	}

.container {
	width: 960px !important;
}

.navbar {
	margin: 0px auto;
}

	.navbar .navbar-banner {
		height: 80px;
		background: rgb(204, 16, 19);
	}

		.navbar .navbar-banner .brandname {
			margin-top: 20px;
			text-decoration: none;
			font: 33px/1.1em "MyriadProRegular","sans-serif" !important;
			color: rgb(237, 237, 237) !important;
		}

			.navbar .navbar-banner .brandname img {
				margin-top: -10px;
				margin-right: 10px;
			}

		.navbar .navbar-banner .contact {
			float: right;
			margin-top: 27px;
			margin-right: 5px;
			font: bold 22px/1.2em "Open Sans","sans-serif";
			color: rgb(255, 255, 255);
		}

		.navbar .navbar-banner .container h5 {
		}

	.navbar .navbar-inner {
		border: none;
		background-image: none;
		background-color: rgb(255, 255, 255);
	}

		.navbar .navbar-inner li {
			vertical-align: baseline;
			height: 45px;
			padding: 0px;
			min-width: 120px;
			text-align: center;
			transition: background-color 0.4s ease 0s;
			color: rgb(0, 0, 0);
		}

			.navbar .navbar-inner li a {				
				padding-top: 12px;
				color: rgb(0, 0, 0) !important;
				text-shadow: none !important;
				font: 15px "Open Sans","sans-serif" !important;
			}

		.navbar .navbar-inner .form-search {
			display: inline-block;
			margin: 0px;
			padding-top: 4px;			
		}

			.navbar .navbar-inner .form-search input {	
				width: 270px;			
				padding: 7px 9px;
				font-size: 16px;
			}

			.navbar .navbar-inner .form-search button {
				padding: 7px 9px;
			}

		.navbar .navbar-inner .nav > .active {
			background-color: rgb(0, 0, 0);
		}

			.navbar .navbar-inner .nav > .active > a {
				color: rgb(255, 255, 255) !important;
				background-color: rgb(0, 0, 0) !important;
			}

		.navbar .navbar-inner .nav.pull-right {
			background-color: rgb(254, 208, 35);
		}

		.navbar .navbar-inner li:hover {
			background-color: rgb(204, 16, 19);
		}

		.navbar .navbar-inner .nav .shopping_cart {
			width: 32px;
			height: 32px;
			margin-right: 5px;
			margin-top: -8px;
		}

.jumbotron {
	padding: 30px 10px 10px;
	background: #EDEDED;
}

	.jumbotron .subtitle {
		font: bold 22px/1.2em "Open Sans","sans-serif";
		color: rgb(204, 16, 19);
	}

	.jumbotron img {
		display: block;
	}

.content .row-categories {
	margin-top: 50px;
	margin-bottom: 35px;
	align-content: center;
}

	.content .row-categories > div {
		text-align: center;
		display: inline-block;
		width: 19.65%;
	}

.row-products {
	margin-bottom: 15px;
}

	.row-products a {
		display: block;
	}

	.row-products > a {
		height: 32px;
		padding-left: 10px;
		border-bottom: 4px solid rgb(204, 16, 19);
		margin-bottom: 5px;
	}

		.row-products > a > h3 {
			float: left;
			margin: 0px;
			margin-top: -5px;			
		}

		.row-products > a > span {
			float: right;
			margin-top: 6px;
			margin-right: 15px;
		}

		.row-products > a:hover {
			background-color: rgb(220, 220, 220);
		}

		.row-products > a:hover {
			text-decoration: none;
		}

	.row-products .product-box {
		position: relative;
		margin: 0px 10px;
		float:left;
		width: 22%;
		min-height: 310px;
		border: 2px solid rgb(255, 255, 255);
		border-radius: 5px;
		transition: border-color 0.4s ease 0s;
	}

		.row-products .product-box:hover {
			border: 2px solid rgb(0, 85, 128);
		}

		.row-products .product-box button {
			position: absolute;
			width: 150px;
			top: 150px;
			left: 30px;
			display: none;
		}

		.row-products .product-box a {
			padding: 20px 10px;
			font: 13px "Open Sans","sans-serif";
		}

			.row-products .product-box a:hover {
				text-decoration: none;
				color: rgb(0, 85, 128);
			}

		.row-products .product-box .old-product-price {
			display: block;
			font: 12px "Open Sans","sans-serif";
			color: rgb(51, 51, 51);
			text-decoration: line-through;
		}

		.row-products .product-box .product-price {
			display: inline-block;
			font: bold 15px "Open Sans","sans-serif";
			color: rgb(204, 16, 19);
		}

		.row-products .product-box .product-discount-rate {
			margin-left: 5px;
			border-radius: 5px;
			padding: 2px 7px;
			color: rgb(255, 255, 255);
			font: bold 13px "Open Sans","sans-serif";
			background-color: rgb(204, 16, 19);
		}

		.row-products .product-box:hover button {
			display: block;
		}

		.row-products .product-box img {
			width: 100%;
			margin-bottom: 10px;
		}

.feature-box {
	margin-bottom: 50px;
	padding: 10px 25px;
}

	.feature-box img {
		padding-left: 20px;
	}

.footer {
	padding: 10px 0px 4px;
	color: rgb(237, 237, 237);
	background: #000000;
	font: 13px/1.3em "Open Sans","sans-serif";
}

